gitops/tenants/dev/payments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      serviceAccountName: payments-sa
      containers:
        - name: payments
          image: public.ecr.aws/docker/library/nginx:alpine
          ports:
            - containerPort: 80
