gitops/tenants/dev/payments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: payments
spec:
  selector:
    app: payments
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
